# mutedpy

./: .gitignore  Readme.md  pyproject.toml
benchmark_template/: benchmark_template.py  protein_operator.py
mutedpy/benchmark_template/: protein_benchmark.py
mutedpy/structure_generation/: generate_mutants_rosetta.py
mutedpy/utils/: data_splits.py  matching_pockets.py  noise_utils.py  structure_utils.py  test.json
protein_learning/: data_splits.py  visualize_splits.py
protein_learning/active_learning/: generate_predictions.py
protein_learning/classification/: clasification_basis_batched.py
protein_learning/convex_models/: regression_convex_func.py
protein_learning/embeddings/: amino_acid_embedding.py  antibody_phys_chem_embedding.py  esm_embedding.py  lookupmap.py  pair_amino_acid_embedding.py
protein_learning/featurizers/: feature_loader.py  feature_selector.py  geometric_features.py
protein_learning/kernels/: onehot_kernel.py
protein_learning/neural_networks/: regression_nn_atom3d.py
protein_learning/regression/: regression_ards.py  regression_ards_geometry.py  regression_basis.py  regression_boosting.py  regression_feature_models.py  regression_robust_loss.py
structure_generation/: generate_mutants_foldx.py  random_subset_structure_generation.py
tests/test_embedding/: test_aminoacidembedding.py  test_lookupmap.py  test_lookupmap_postgres.py
tests/test_sequence_utils/: test_remove_special_charc.py
utils/: protein_operator.py  visualization_utils.py
utils/loaders/: loader.py  loader_sean.py  loader_thomas.py
utils/sequences/: fastaq.py  (+1 more)
(+35 files in other folders)
